p2/manifests/apps/app1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app1-html

---

apiVersion: v1
kind: Service
metadata:
  name: app-one
  namespace: application
spec:
  selector:
    app: app-one
  ports:
  - port: 80
    targetPort: 80
