p2/manifests/apps/app1/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: application
spec:
  parentRefs:
  - name: web
    namespace: application
    sectionName: http
  hostnames: ["app1.com"]
  rules:
  - backendRefs:
    - name: app-one
      port: 80
